crates/reinhardt-core/macros/tests/ui/model_enum/fail/empty_enum.rs
use reinhardt_macros::ModelEnum;

#[derive(ModelEnum)]
#[model_enum(repr = "string")]
enum EmptyEnum {}

fn main() {}
